UPD - Fix wrap text content

--- a/projects/sco-angular-components/resources/themes/theme-blue.scss
+++ b/projects/sco-angular-components/resources/themes/theme-blue.scss
@@ -397,6 +397,7 @@ $content: #FFF;
                     color: #FFF;      
                     display: flex;
                     border-radius: 0px;
+                    width: max-content;
 
                     &--sub-item-hover {
                         color: #FFF;
