--- a/projects/sco-angular-components/resources/themes/theme-dark.scss
+++ b/projects/sco-angular-components/resources/themes/theme-dark.scss
@@ -433,6 +433,7 @@ $content: #121212;
                     color: $color-text;      
                     display: flex;
                     border-radius: 0px;
+                    width: max-content;
 
                     &--sub-item-hover {
                         color: #FFF;
