--- a/projects/sco-angular-components/src/components/sco-menu/sco-menu.component.scss
+++ b/projects/sco-angular-components/src/components/sco-menu/sco-menu.component.scss
@@ -24,6 +24,7 @@
             color: #FFF;      
             display: flex;
             border-radius: 0px;
+            width: max-content;
 
             &--sub-item-hover {
                 color: #FFF;
